tests/error/linear_errors/unused_expr.err
Guppy compilation failed. Error in file $FILE:14

12:    @guppy(module)
13:    def foo(q: qubit @owned) -> None:
14:        h(q)
           ^^^^
GuppyTypeError: Value with linear type `qubit` is not used
